src/test/ui/issues/issue-27433.stderr
error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/issue-27433.rs:13:23
   |
LL |     const FOO : u32 = foo;
   |                       ^^^
   |
   = help: use the `|| { ... }` closure form instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0434`.
